# cpp-project-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.MD
